compiler/tools/fpp-check/test/component_instance_def/passive_stack_size.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/component_instance_def/passive_stack_size.fpp: 5.40
instance c: C base id 0x100 stack size 10 * 1024
                                       ^
error: invalid component instance definition c: passive component may not have stack size
